--- a/views/users/user-profile.ejs
+++ b/views/users/user-profile.ejs
@@ -21,9 +21,9 @@
     <div class="container rounded shadow-lg mb-4">
         <div class="row">
             <div class="col-md-3 border-right">
-                <% if(walletData){%>
+                <!-- <% if(walletData){%>
                     <div class="card col-md-12 ms-0 text-center mt-5 bg-warning"><div class="row"><div class="col-md-6"><b class="text-dark">wallet</b></div><div class="col-md-6"><b class="text-dark"><%= walletData.amount %></b></div></div></div>
-                    <%} %>
+                    <%} %> -->
                 <% if(userData){ %>
                     <div class="d-flex flex-column align-items-center text-center p-3 py-5 mt-5"><img
                             class="rounded-circle mt-5" width="150px"
