modified cart button banner list update

--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -254,7 +254,11 @@
 							<p class="card-text">
 								<%= data.status %>
 							</p>
-							<a class="button" href="/add-cart?id=<%= data._id %>">Add Cart</a>
+							<%if(user){%>
+								<a class="button" href="/add-cart?id=<%= data._id %>">Add Cart</a>
+							<%}else{%>
+								<a class="button" href="/login">Add Cart</a>
+								<%}%>
 						</figure>
 
 						<% }); %>
