--- a/views/admin/banner-list.ejs
+++ b/views/admin/banner-list.ejs
@@ -15,8 +15,8 @@
                     <th scope="col">No</th>
                     <th scope="col">Images</th>
                     <th scope="col">Name</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Category</th>
+                    <th scope="col">offers tag</th>
+                    <th scope="col">discount</th>
                     <th scope="col">users view</th>
                     <th scope="col">Actions</th>
                 </tr>
