add one textbox in coupon code

--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -23,8 +23,9 @@
                                 <div class="card-header">
                                   <div class="col-xl-12 mt-5"><input type="text" id="couponCodeName" name="couponCodeName" class="border-white shadow-lg text-center"  placeholder="couponName"></div>
                                   <div class="col-xl-12"><input type="number" id="discount" name="discount" class="border-white shadow-lg text-center mt-4" placeholder="discount"></div>
-                                 <div class="col-xl-12"><input type="number" id="minPrice" name="minPrice" class="border-white shadow-lg text-center mt-4" placeholder="MinPrice"></div>
-                                <div class="col-xl-12"><input type="number" id="maxPrice" name="maxPrice" class="border-white shadow-lg text-center mt-4" placeholder="Max Price"></div>
+                                 <div class="col-xl-12"><input type="number" id="minPrice" name="minPrice" class="border-white shadow-lg text-center mt-4" placeholder="Min Purchase Amount"></div>
+                                <div class="col-xl-12"><input type="number" id="maxPrice" name="maxPrice" class="border-white shadow-lg text-center mt-4" placeholder="Max Purchase Amount"></div>
+                                <div class="col-xl-12"><input type="number" id="maxPrice1" name="maxPrice1" class="border-white shadow-lg text-center mt-4" placeholder="Max Price"></div>
                                   <!-- <div class="col-xl-12"><input type="date" id="expire-date" name="start-date" class="border-white shadow-lg text-center mt-4" placeholder="coupon start date"></div> -->
                                   <div class="col-xl-12"><input type="Date" id="expire-date" name="endDate" class="border-white shadow-lg text-center mt-4" placeholder="coupon end date"></div>
                                   
